--- a/public/styles.css
+++ b/public/styles.css
@@ -36,10 +36,12 @@
     right: 0px;
     top: 0;
     width: 400px;
+    max-height: 100%;
     padding: 4px;
     background-color: #EEE;
     font-size: 16px;
     font-family: arial;
+    overflow: auto;
 }
 
 .pp-row {
